Use OrderMap in GraphMap
This has multiple benefits. Not using a randomized order makes the
GraphMap's iteration order deterministic, which is in itself a good
thing.

Down the line we want to reform GraphMap and exploit the indexed access
in OrderMap.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ debug = true
 fixedbitset = "0.1.0"
 quickcheck = { optional = true, version = "0.3" }
 itertools = "0.5"
+ordermap = { version = "0.2.1" }
 
 [dev-dependencies]
 rand = "0.3"
